@@ -1,3 +1,7 @@
+2005-08-30 Alain Magloire
+	New test for PR 109202 (written by Devin Steffler)
+	* ui/org/eclipse/cdt/ui/tests/tex/selectiontests/CPPSelectionTestsDOMIndexer.java
+
 2005-06-08 Alain Magloire
 	Move to the IContentTypeManager framework: PR 86645
 	* src.org.eclipse/cdt/ui/tests/DOMAST/DOMAST.java
